fixed shadow position on smaller screen sizes

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -171,7 +171,7 @@
 
 .shadow {
 	position: absolute;
-	top: 50%;
+	top: calc((50% + (1vw)));
 	left: 50%;
 	width: 80vw;
 	height: 8vw;
@@ -181,7 +181,6 @@
 	-webkit-transform: translate(-50%, 190%);
 	-moz-transition: .4s;
 	-moz-transform: translate(-50%, 190%);
-	
 	border-radius: 100%;
 	background: radial-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.0), rgba(0,0,0,0.0));
 }
@@ -189,8 +188,6 @@
 
 .sendMsgButton {
 	position: absolute;
-	// bottom: calc((50% - (6vw)));
-	// left: calc((50% - (3vw)));
 	top: 0%;
 	left: calc((50% - (3vw)));
 	-webkit-transform: translate(0%, -260%);
@@ -245,6 +242,40 @@
 	}
 }
 
+
+
+
+
+
+
+
+
+
+
+
+/* ------------------ Media Queries (Medium devices) -------------------- */
+
+@media screen and (max-width: 850px) {
+
+	.shadow {
+		top: calc((50% + (3vw)));
+	}
+
+
+}
+
+
+
+
+/* ------------------ Media Queries (Small devices) -------------------- */
+
+@media screen and (max-width: 600px) {
+
+	.shadow {
+		top: calc((50% + (6vw)));
+	}
+
+}
 
 
 
